--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: magic-device-tool
 version: "1.0"
-summary: A simple and feature full batch tool to handle installing/replacing Operating Systems on your mobile devices.
+summary: magic-device-tool
 description: |
   A simple and feature full batch tool to handle installing/replacing Operating Systems (Ubuntu Phone / Ubuntu Touch, Android, CyanogenMod, Maru OS, Sailfish OS and Phoenix OS) on your mobile devices.
 grade: stable
@@ -12,6 +12,7 @@ apps:
 parts:
   magic-device-tool:
     source: https://github.com/MariusQuabeck/magic-device-tool.git
+    source-branch: snap
     plugin: dump
     stage-packages:
       - ubuntu-device-flash
