Update desktop launcher

--- a/setup/gui/magic-device-tool.desktop
+++ b/setup/gui/magic-device-tool.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=Magic-Device-Tool
 GenericName=Magic-Device-Tool
 Comment=A simple and feature full tool to handle installing/replacing Operating Systems on your mobile devices.
-Exec=${SNAP}/launcher.sh
+Exec=launcher.sh
 Icon=${SNAP}/meta/gui/mdt.png
 Terminal=true
 Type=Application
