--- a/setup/gui/magic-device-tool.desktop
+++ b/setup/gui/magic-device-tool.desktop
@@ -5,8 +5,9 @@ GenericName=Magic-Device-Tool
 Comment=A simple and feature full tool to handle installing/replacing Operating Systems on your mobile devices.
 Exec=launcher.sh
 Icon=${SNAP}/meta/gui/mdt.png
-Terminal=true
+Terminal=false
 Type=Application
 StartupNotify=false
-Categories=Application
+Categories=Utility;
+
 
