--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -8,7 +8,7 @@ confinement: strict
 
 apps:
   magic-device-tool:
-    command: desktop-launch launcher.sh
+    command: launcher.sh
     plugs: [network, network-bind, browser-support, raw-usb, unity7, home, x11]
 parts:
   magic-device-tool:
