--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -2,14 +2,14 @@ name: magic-device-tool
 version: "1.0"
 summary: magic-device-tool
 description: |
-  A simple and feature full batch tool to handle installing/replacing Operating Systems (Ubuntu Phone / Ubuntu Touch, Android, CyanogenMod, Maru OS, Sailfish OS and Phoenix OS) on your mobile devices.
+  A simple and feature full tool to handle installing/replacing Operating Systems (Ubuntu Phone / Ubuntu Touch, Android, CyanogenMod, Maru OS, Sailfish OS and Phoenix OS) on your mobile devices.
 grade: stable
 confinement: strict
 
 apps:
   magic-device-tool:
     command: launcher.sh
-    plugs: [network, network-bind, browser-support, raw-usb, unity7, home, x11]
+    plugs: [network, network-bind, raw-usb, home]
 parts:
   magic-device-tool:
     source: https://github.com/MariusQuabeck/magic-device-tool.git
