--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,10 +1,10 @@
 name: magic-device-tool
-version: "1.3"
+version: "1.4"
 summary: magic-device-tool
 description: |
   A simple and feature full tool to handle installing/replacing Operating Systems (Ubuntu Phone / Ubuntu Touch, Android, CyanogenMod, Maru OS, Sailfish OS and Phoenix OS) on your mobile devices.
 grade: stable
-confinement: strict
+confinement: classic
 
 apps:
   magic-device-tool:
