--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -4,11 +4,12 @@ summary: magic-device-tool
 description: |
   A simple and feature full tool to handle installing/replacing Operating Systems (Ubuntu Phone / Ubuntu Touch, Android, CyanogenMod, Maru OS, Sailfish OS and Phoenix OS) on your mobile devices.
 grade: stable
-confinement: classic
+confinement: strict
 
 apps:
   magic-device-tool:
     command: launcher.sh 
+    plugs: [network, network-bind, raw-usb, home]
 parts:
   magic-device-tool:
     source: https://github.com/MariusQuabeck/magic-device-tool.git
